--- a/html codes/background.html
+++ b/html codes/background.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
-   
+
 </head>
 
 <body>
@@ -18,6 +18,6 @@
 
 </body>
 
-<script src="../javascript/main.js"></script>
+<script type="module" src="../javascript/main.js"></script>
 
 </html>
